--- a/client/src/components/HeaderImage/HeaderImage.css
+++ b/client/src/components/HeaderImage/HeaderImage.css
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: 23% 54% 23%;
     grid-template-rows: 35.3% 32.35% 32.35%;
+    margin-top: 47px;
 }
 
 h1,h2,h3,h4,h5,h6 {
